# WebsiteAnalyzer

./: .replit  README.md  app.py  app_broken.py  app_broken_chromadb.py  cache_www.verizon.com_20250615_171543.json  cache_www.verizon.com_20250615_175927.json  cache_www.verizon.com_20250615_182823.json  chroma_engine.py  chroma_engine_fixed.py  chroma_engine_simple.py  database.py  database_simple.py  pyproject.toml  rag_engine.py  replit.md  scraper.py  simple_rag_engine.py  symbiosystech.com_Jun-16-2025_05-22am_24pages.json  symbiosystech.com_Jun-16-2025_05-48am_25pages.json  symbiosystech.com_Jun-16-2025_06-51am_25pages.json  testing_utils.py  utils.py  verizon.com_Jun-16-2025_05-15am_24pages.json  verizon_data.json  web_crawler.py  web_rag_engine.py
chroma_db/: chroma.sqlite3
config/: settings.py
data/cache/: symbiosystech.com_Jun-16-2025_06-12am_24pages.json  symbiosystech.com_Jun-16-2025_8-16am_24pages.json  symbiosystech.com_Jun-16-2025_8-51am_24pages.json  symbiosystech.com_Jun-16-2025_9-03am_24pages.json  verizon_jun-19-2025_02-31pm_25pages.json  verizon_jun-19-2025_08-31am_25pages.json  verizon_jun-19-2025_08-41am_20pages.json  verizon_jun-19-2025_09-21am_20pages.json  verizon_jun-19-2025_12-24pm_20pages.json  www.tricolor.com_Jun-16-2025_3-32pm_49pages.json  www.verizon.com_20250619_072155_7pages.json  www.verizon.com_20250619_072521_7pages.json  www.verizon.com_20250619_080859_7pages.json  www.verizon.com_20250619_081749_96pages.json  www.verizon.com_Jun-19-2025_2-54pm_24pages.json
data/chroma/: chroma.sqlite3
src/: __init__.py
src/core/: crawler.py  (+1 more)
web_content_db/: chroma.sqlite3
(+4 files in other folders)
