[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "openai>=1.86.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "streamlit-agraph>=0.0.45",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
    "trafilatura>=2.0.0",
    "aiohttp>=3.12.13",
    "urllib3>=2.4.0",
    "lxml>=5.4.0",
    "newspaper3k>=0.2.8",
    "python-magic>=0.4.27",
    "scrapy>=2.13.2",
    "selenium>=4.33.0",
    "readability-lxml>=0.8.4.1",
    "langchain-community>=0.3.25",
    "plotly>=6.1.2",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "chromadb>=1.0.13",
]
